--- a/food/styles/style.css
+++ b/food/styles/style.css
@@ -25,8 +25,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
-}
+ }
 
 html{
     width: 100%z;
